# games101

./: .gitignore
作业/Assignment1/代码框架/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
作业/Assignment2/代码框架/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
作业/Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
作业/Assignment6/PA6/Assignment6/: BVH.cpp  Triangle.hpp
作业/Assignment7/PA7/Assignment7/: Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp
作业/PA6/PA6/Assignment6/: Bounds3.hpp  Renderer.cpp
作业/PA7-1/PA7/Assignment7/: BVH.cpp  Scene.cpp
